# tplink-powerstats

./: .gitlab-ci.yml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-image.yml
grafana/: TpLink Power Usage-1736872341299.json
src/tplink_powerstats/: __init__.py  __main__.py  collector.py  exporter.py  main.py
